--- a/dunplab-manifest-9819.json
+++ b/dunplab-manifest-9819.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Zwei jahre",
+  "short_name": "Zwei Jahre",
   "name": "Zwei Jahre",
   "lang": "de",
   "description": "Jahrestagsgeschenk von Sacha für Regina",
